Remove server-side tails library.
It hasn't actually been functional for a very long time, and I don't
think I've ever needed (or wanted) to use it anyway.
If people want to share their tails with other server members, they can
just use the export button instead.